--- a/SysPool/SysPool.csproj
+++ b/SysPool/SysPool.csproj
@@ -114,4 +114,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadUnhandledDeviceExceptionSysPoolHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+
 </Project>
